Added batchnorm folding for non quantized export. Cleaned export files.
Updated the export functions to write a number to config if the layer has a bias. Export without quantization includes batchfolding, so batchnorm layer do not have to be written to file. Export with quantization has batchnorm layers, so conv layers do not have bias terms.

--- a/export.ipynb
+++ b/export.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8c4f6d8b",
    "metadata": {},
    "outputs": [],
@@ -10,17 +10,17 @@
     "#|export\n",
     "import torch\n",
     "import struct\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sympy import divisors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "98446256",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
     "seed = 1337\n",
     "torch.manual_seed(seed)\n",
     "torch.cuda.manual_seed(seed)"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e8ed7cab",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "74840945",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "de6ec66e",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "76139411",
    "metadata": {},
    "outputs": [],
@@ -137,58 +137,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "id": "8e29ffa9",
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
-    "def export_model(model, file_path=\"model.bin\"):\n",
+    "def fold_batchnorm(cnn, bn) :\n",
+    "    ''' Fold batchnorm layer into convolutional layer '''\n",
+    "\n",
+    "    # apply batchnorm folding\n",
+    "    var = 1 / torch.sqrt(bn.running_var + bn.eps)\n",
+    "    w_fold = cnn.weight.data * (bn.weight.data * var).view(-1,1,1,1)\n",
+    "    cnn.weight.data = w_fold\n",
+    "\n",
+    "    if cnn.bias is None:\n",
+    "        cnn.bias = torch.nn.Parameter(torch.zeros(cnn.weight.shape[0])) # initialize bias as 0 if doesn't exist\n",
+    "\n",
+    "    b_fold = bn.weight.data * (cnn.bias.data - bn.running_mean) * var + bn.bias.data\n",
+    "    cnn.bias.data = b_fold\n",
+    "    \n",
+    "\n",
+    "\n",
+    "def export_model(model_path=\"model.pt\", file_path=\"model.bin\"):\n",
     "    '''\n",
-    "    Export the model to a file at the specified filepath\n",
+    "    Export the quantized model to a file\n",
     "    The data inside the file follows this order:\n",
-    "    1. Number of classes, CNN layers, and FC layers.\n",
-    "    2. CNN and FC layers' configuration.\n",
-    "    3. CNN and FC layers' parameters.\n",
+    "    1. The number of: classes, each type of layers and parameters\n",
+    "    2. CNN, FC and BN layers' configuration\n",
+    "    3. CNN, FC and BN layers' parameters\n",
     "    '''\n",
+    "    model = torch.load(model_path)\n",
     "    f = open(file_path, \"wb\")\n",
     "    # write model config\n",
-    "    conv_layers = [model.conv1, model.conv2]\n",
+    "    conv_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.Conv2d)]\n",
+    "    bn_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.BatchNorm2d)]\n",
+    "    for conv_layer, bn_layer in zip(conv_layers, bn_layers):\n",
+    "        fold_batchnorm(conv_layer, bn_layer) # fold batchnorm layers into convolutional layers\n",
     "    nconv = len(conv_layers)\n",
-    "    linear_layers = [model.fc1, model.fc2]\n",
+    "    linear_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.Linear)]\n",
     "    nlinear = len(linear_layers)\n",
-    "    header = struct.pack(\"iii\", model.nclasses, nconv, nlinear)\n",
+    "    nclasses = 10\n",
+    "    header = struct.pack(\"3i\", nclasses, nconv, nlinear)\n",
     "    f.write(header)\n",
+    "\n",
     "    # write layers' config\n",
     "    offset = 0 # the number of bytes in float32 (i.e. offset 1 = 4 bytes)\n",
     "    for layer in conv_layers:\n",
-    "        f.write(struct.pack(\"6i\", layer.kernel_size[0], layer.stride[0], layer.padding[0],\n",
-    "                layer.in_channels, layer.out_channels, offset))\n",
+    "        bias = 1 if layer.bias is not None else 0\n",
+    "        f.write(struct.pack(\"7i\", layer.kernel_size[0], layer.stride[0], layer.padding[0],\n",
+    "                layer.in_channels, layer.out_channels, offset, bias))\n",
     "        # set offset to the start of next layer\n",
-    "        offset += layer.out_channels*layer.in_channels*layer.kernel_size[0]**2 + layer.out_channels\n",
+    "        t_offset =  layer.out_channels*layer.in_channels*layer.kernel_size[0]**2\n",
+    "        # Check if the layer has a bias term and adjust the offset accordingly\n",
+    "        offset += t_offset + bias * layer.out_channels  # Include biases in the offset if bias is not None\n",
     "\n",
-    "    for layer in linear_layers:\n",
-    "        f.write(struct.pack(\"3i\", layer.in_features, layer.out_features, offset))\n",
-    "        offset += layer.in_features*layer.out_features + layer.out_features\n",
-    "\n",
+    "    for l in linear_layers:\n",
+    "        bias = 1 if l.bias is not None else 0\n",
+    "        f.write(struct.pack(\"4i\", l.in_features, l.out_features, offset, bias))\n",
+    "        offset += l.in_features * l.out_features + bias * l.out_features\n",
+    "          \n",
     "    # write the weights and biases of the model\n",
-    "    for layer in conv_layers:\n",
-    "        for p in layer.parameters():\n",
-    "            serialize_fp32(f, p)\n",
-    "\n",
-    "    for layer in linear_layers:\n",
-    "        for p in layer.parameters():\n",
+    "    for l in [*conv_layers, *linear_layers]:\n",
+    "        for p in l.parameters():\n",
     "            serialize_fp32(f, p)\n",
     "\n",
     "    f.close()\n",
-    "    print(f\"wrote {file_path}\")\n",
-    "    \n",
-    "    torch.save(model, \"model.pt\") # for loading in python"
+    "    print(f\"wrote {file_path}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "id": "fdbbe72d",
    "metadata": {},
    "outputs": [
@@ -201,7 +221,6 @@
     }
    ],
    "source": [
-    "# Unit test for export_model()\n",
     "import os\n",
     "import torch.nn as nn\n",
     "\n",
@@ -209,53 +228,161 @@
     "    def __init__(self):\n",
     "        super(TestModel, self).__init__()\n",
     "        self.nclasses = 4\n",
-    "        self.conv1 = nn.Conv2d(1, 1, kernel_size=3, padding=1)\n",
-    "        self.conv2 = nn.Conv2d(1, 1, kernel_size=3, padding=1)\n",
+    "        self.conv1 = nn.Conv2d(1, 1, kernel_size=3, padding=1, bias=False)\n",
+    "        self.conv2 = nn.Conv2d(1, 1, kernel_size=3, padding=1, bias=False)\n",
+    "        self.bn = nn.BatchNorm2d(1)\n",
     "        self.fc1 = nn.Linear(3, 2)\n",
-    "        self.fc2 = nn.Linear(2, 1)\n",
+    "        self.fc2 = nn.Linear(2, 1, bias=False)\n",
     "\n",
     "m = TestModel()\n",
+    "torch.save(m, \"test.pt\")\n",
     "\n",
     "def test_export_model():\n",
     "    fname = '/tmp/.test.bin'\n",
-    "    export_model(m, fname)\n",
-    "    assert os.path.getsize(fname)==208 # manucally calc from export_model()\n",
+    "    mpath = \"test.pt\"\n",
+    "    export_model(mpath, fname)\n",
+    "    assert os.path.getsize(fname)==216 # manucally calc from export_model()\n",
     "\n",
     "test_export_model()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
+   "id": "6a09db19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_bias_not_none():\n",
+    "    conv_layer = nn.Conv2d(3, 16, kernel_size=3, stride=1, padding=1, bias=False)\n",
+    "    bn_layer = nn.BatchNorm2d(16)\n",
+    "    fold_batchnorm(conv_layer, bn_layer)\n",
+    "    assert conv_layer.bias is not None, \"Bias is None after folding.\"\n",
+    "\n",
+    "# Unit test for batchnorm folding\n",
+    "def test_folding():\n",
+    "    input_tensor = torch.randn(1, 3, 32, 32)\n",
+    "    conv_layer_original = nn.Conv2d(3, 16, kernel_size=3, stride=1, padding=1, bias=True)\n",
+    "    bn_layer = nn.BatchNorm2d(16)\n",
+    "    conv_layer_folded = nn.Conv2d(3, 16, kernel_size=3, stride=1, padding=1, bias=True)\n",
+    "    conv_layer_folded.load_state_dict(conv_layer_original.state_dict())\n",
+    "    with torch.no_grad():\n",
+    "            bn_layer(conv_layer_original(input_tensor)) # the running mean and var are updated, \"forward pass\"\n",
+    "\n",
+    "            bn_layer.eval() # use current running mean and var\n",
+    "            fold_batchnorm(conv_layer_folded, bn_layer)\n",
+    "            output_original = bn_layer(conv_layer_original(input_tensor))\n",
+    "            output_folded = conv_layer_folded(input_tensor)\n",
+    "            assert torch.allclose(output_original, output_folded, atol=1e-5), \"Output mismatch after folding.\"\n",
+    "\n",
+    "test_bias_not_none()\n",
+    "test_folding()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
    "id": "71f18915",
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
+    "def calculate_groupsize(dim, gs):\n",
+    "    '''\n",
+    "    Change the group size if dimension is smaller, and adjust if dim is not a\n",
+    "    multiple of group size. Otherewise it remains the same.\n",
+    "    '''\n",
+    "    if dim < gs:\n",
+    "        return dim\n",
+    "    elif  dim % gs == 0:\n",
+    "        return gs\n",
+    "    else:\n",
+    "        factors = list(divisors(dim)) # give the factors of number \"dim\"\n",
+    "        return min(factors, key=lambda x: abs(x - gs)) # find the closest number to group size\n",
+    "\n",
     "def export_modelq8(model_path=\"model.pt\", file_path=\"modelq8.bin\", gs=64):\n",
-    "    ''' read a model from model.bin if not given and export a quatized (int8) model to filepath '''\n",
+    "    '''\n",
+    "    Export the quantized model to a file\n",
+    "    The data inside the file follows this order:\n",
+    "    1. The number of: classes, each type of layers and parameters\n",
+    "    2. CNN, FC and BN layers' configuration\n",
+    "    3. CNN and FC layers' quantized parameters\n",
+    "    4. CNN and FC layers' scaling factors\n",
+    "    5. BN layers' parameters\n",
+    "    '''\n",
     "    model = torch.load(model_path)\n",
     "    f = open(file_path, \"wb\")\n",
-    "    # write the model structure \n",
-    "    header = struct.pack(\"iii\", model.dim, model.nclasses, gs)\n",
-    "    f.write(header) \n",
-    "    # quantize and write the model weights and biases\n",
-    "    weights = [*[layer.weight for layer in model.layers], model.out.weight]\n",
-    "    biases = [*[layer.bias for layer in model.layers], model.out.bias]\n",
-    "    params = [*weights, *biases]\n",
+    "    # write model config\n",
+    "    conv_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.Conv2d)]\n",
+    "    nconv = len(conv_layers)\n",
+    "    linear_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.Linear)]\n",
+    "    nlinear = len(linear_layers)\n",
+    "    bn_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.BatchNorm2d)]\n",
+    "    nbn = len(bn_layers)\n",
+    "    nclasses = 10\n",
+    "    nparameters = sum(p.numel() for layer in [*conv_layers, *linear_layers] for p in layer.parameters())\n",
+    "    header = struct.pack(\"5i\", nclasses, nconv, nlinear, nbn, nparameters)\n",
+    "    f.write(header)\n",
+    "    # write layers' config\n",
+    "    qoffset = 0 # offset for quantized parameters\n",
+    "    soffset = 0 # offset for scaling factors\n",
+    "    group_sizes = [] # save group sizes of each layer\n",
+    "    for layer in conv_layers:\n",
+    "        # calculates group sizes for weights and biases\n",
+    "        gs_weight = calculate_groupsize(layer.in_channels * layer.kernel_size[0]**2, gs)\n",
+    "        gs_bias = calculate_groupsize(layer.out_features, gs) if layer.bias is not None else 0\n",
+    "        group_sizes.append(gs_weight)\n",
     "\n",
+    "        f.write(struct.pack(\"9i\", layer.kernel_size[0], layer.stride[0], layer.padding[0],\n",
+    "                layer.in_channels, layer.out_channels, qoffset, soffset, gs_weight, gs_bias))\n",
+    "        # set offsets to the start of next layer\n",
+    "        nweights = layer.out_channels * layer.in_channels * layer.kernel_size[0]**2\n",
+    "        qoffset += nweights\n",
+    "        soffset += nweights // gs_weight\n",
+    "\n",
+    "    for layer in linear_layers:\n",
+    "       \n",
+    "        gs_weight = calculate_groupsize(layer.in_features, gs)\n",
+    "        gs_bias = calculate_groupsize(layer.out_features, gs) if layer.bias is not None else 0\n",
+    "        group_sizes.append(gs_weight)\n",
+    "        if layer.bias is not None:\n",
+    "            group_sizes.append(gs_bias)\n",
+    "\n",
+    "        f.write(struct.pack(\"6i\", layer.in_features, layer.out_features, qoffset, soffset,\n",
+    "                            gs_weight, gs_bias))\n",
+    "\n",
+    "        nweights = layer.in_features * layer.out_features\n",
+    "        if layer.bias is not None:\n",
+    "            qoffset += nweights + layer.out_features\n",
+    "            soffset += nweights // gs_weight + layer.out_features // gs_bias\n",
+    "        else:\n",
+    "            qoffset += nweights\n",
+    "            soffset += nweights // gs_weight   \n",
+    "\n",
+    "    for l in bn_layers:\n",
+    "        f.write(struct.pack(\"2i\", l.num_features, soffset))\n",
+    "        # weight, bias, running_mean, running_var\n",
+    "        soffset += 4 * l.num_features\n",
+    "\n",
+    "    # write layers' parameters\n",
     "    ew = []\n",
-    "    for i, p in enumerate(params):\n",
-    "        if i==len(params)-1 and gs>model.nclasses:\n",
-    "            gs = model.nclasses\n",
-    "        # quantize this weight\n",
-    "        q, s, err = quantize_q80(p, gs)\n",
-    "        # save the int8 weights to file\n",
-    "        serialize_int8(f, q) # save the tensor in int8\n",
+    "    scaling_factors = []\n",
+    "    i = 0\n",
+    "    for l in [*conv_layers, *linear_layers]:\n",
+    "        for p in l.parameters():\n",
+    "            q, s, err = quantize_q80(p, group_sizes[i])\n",
+    "            serialize_int8(f, q) # save the tensor in int8\n",
+    "            scaling_factors.append(s)\n",
+    "            ew.append((err, p.shape))\n",
+    "            i += 1\n",
+    "            print(f\"Quantized {tuple(p.shape)} to Q8_0 with max error {err}\")\n",
+    "\n",
+    "    for s in scaling_factors:\n",
     "        serialize_fp32(f, s) # save scale factors\n",
-    "        # logging\n",
-    "        ew.append((err, p.shape))\n",
-    "        print(f\"{i+1}/{len(params)} quantized {tuple(p.shape)} to Q8_0 with max error {err}\")\n",
+    "\n",
+    "    for l in bn_layers:\n",
+    "        for p in [l.weight, l.bias, l.running_mean, l.running_var]:\n",
+    "            serialize_fp32(f, p)\n",
     "\n",
     "    # print the highest error across all parameters, should be very small, e.g. O(~0.001)\n",
     "    ew.sort(reverse=True)\n",
@@ -266,18 +393,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "id": "8e696dc1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wrote /tmp/.test.bin\n",
+      "Quantized (1, 1, 3, 3) to Q8_0 with max error 0.0011526569724082947\n",
+      "Quantized (1, 1, 3, 3) to Q8_0 with max error 0.001158013939857483\n",
+      "Quantized (2, 3) to Q8_0 with max error 0.0010108351707458496\n",
+      "Quantized (2,) to Q8_0 with max error 0.00028876960277557373\n",
+      "Quantized (1, 2) to Q8_0 with max error 0.002393275499343872\n",
+      "max quantization group error across all weights: 0.002393275499343872\n",
+      "wrote /tmp/.test.bin\n"
+     ]
+    }
+   ],
    "source": [
-    "# FIXME: Unit test for export_modelq8()\n",
-    "def test_export_modelq8():\n",
-    "    #model = \n",
-    "    assert True\n",
+    "# Unit test for calculate_groupsize()\n",
+    "def test_calculate_groupsize():\n",
+    "    assert calculate_groupsize(4, 8)==4\n",
+    "    assert calculate_groupsize(8, 4)==4\n",
+    "    assert calculate_groupsize(9, 4)==3\n",
+    "    assert calculate_groupsize(10, 5)==5\n",
+    "    assert calculate_groupsize(5, 10)==5\n",
+    "    assert calculate_groupsize(20, 3)==2\n",
     "    \n",
+    "test_calculate_groupsize()\n",
+    "\n",
+    "def test_edge_cases():\n",
+    "    assert calculate_groupsize(1, 10) == 1, \"Should handle dimension of 1 correctly.\"\n",
+    "    assert calculate_groupsize(100, 101) == 100, \"Should adjust group size to dimension if it's larger.\"\n",
+    "    assert calculate_groupsize(13, 2) == 1, \"Should return 1 for prime dimensions.\"\n",
+    "\n",
+    "test_edge_cases()\n",
+    "\n",
+    "\n",
+    "# Unit test for export_modelq8()\n",
+    "def test_export_modelq8():\n",
+    "    fname = '/tmp/.test.bin'\n",
+    "    mpath = \"test.pt\"\n",
+    "    export_model(mpath, fname)\n",
+    "    export_modelq8(mpath, fname, gs=10)\n",
+    "    assert os.path.getsize(fname)==216\n",
+    "\n",
     "test_export_modelq8()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0486bb6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d218cbe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -285,6 +465,18 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
