resnet18 c inference working

--- a/export.ipynb
+++ b/export.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "id": "8c4f6d8b",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,13 @@
     "import torch\n",
     "import struct\n",
     "import numpy as np\n",
-    "from sympy import divisors"
+    "from sympy import divisors\n",
+    "from train import load"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "id": "98446256",
    "metadata": {},
    "outputs": [],
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 62,
    "id": "e8ed7cab",
    "metadata": {},
    "outputs": [],
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "id": "74840945",
    "metadata": {},
    "outputs": [],
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "id": "de6ec66e",
    "metadata": {},
    "outputs": [],
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 65,
    "id": "76139411",
    "metadata": {},
    "outputs": [],
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 69,
    "id": "8e29ffa9",
    "metadata": {},
    "outputs": [],
@@ -158,8 +159,7 @@
     "    cnn.bias.data = b_fold\n",
     "    \n",
     "\n",
-    "\n",
-    "def export_model(model_path=\"model.pt\", file_path=\"model.bin\"):\n",
+    "def export_model(model_name=\"resnet18\", file_path=\"model.bin\"):\n",
     "    '''\n",
     "    Export the quantized model to a file\n",
     "    The data inside the file follows this order:\n",
@@ -167,18 +167,20 @@
     "    2. CNN, FC and BN layers' configuration\n",
     "    3. CNN, FC and BN layers' parameters\n",
     "    '''\n",
-    "    model = torch.load(model_path)\n",
+    "    model = load(model_name)\n",
     "    f = open(file_path, \"wb\")\n",
     "    # write model config\n",
     "    conv_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.Conv2d)]\n",
     "    bn_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.BatchNorm2d)]\n",
+    "    bn1_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.BatchNorm1d)]\n",
     "    for conv_layer, bn_layer in zip(conv_layers, bn_layers):\n",
     "        fold_batchnorm(conv_layer, bn_layer) # fold batchnorm layers into convolutional layers\n",
     "    nconv = len(conv_layers)\n",
+    "    nbn1 = len(bn1_layers)\n",
     "    linear_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.Linear)]\n",
     "    nlinear = len(linear_layers)\n",
     "    nclasses = 10\n",
-    "    header = struct.pack(\"3i\", nclasses, nconv, nlinear)\n",
+    "    header = struct.pack(\"4i\", nclasses, nconv, nlinear, nbn1)\n",
     "    f.write(header)\n",
     "\n",
     "    # write layers' config\n",
@@ -195,12 +197,24 @@
     "    for l in linear_layers:\n",
     "        bias = 1 if l.bias is not None else 0\n",
     "        f.write(struct.pack(\"4i\", l.in_features, l.out_features, offset, bias))\n",
-    "        offset += l.in_features * l.out_features + bias * l.out_features\n",
+    "        offset += l.in_features * l.out_features + bias * l.out_features    \n",
+    "\n",
+    "    for layer in bn1_layers:\n",
+    "        f.write(struct.pack(\"2i\", layer.num_features, offset))\n",
+    "        # set offset to the start of next layer\n",
+    "        # weight, bias, running_mean, running_var\n",
+    "        offset += 4 * layer.num_features\n",
     "          \n",
     "    # write the weights and biases of the model\n",
     "    for l in [*conv_layers, *linear_layers]:\n",
     "        for p in l.parameters():\n",
     "            serialize_fp32(f, p)\n",
+    "    \n",
+    "    for layer in bn1_layers:\n",
+    "        for p in layer.parameters():\n",
+    "            serialize_fp32(f, p)\n",
+    "        serialize_fp32(f, layer.running_mean)\n",
+    "        serialize_fp32(f, layer.running_var)\n",
     "\n",
     "    f.close()\n",
     "    print(f\"wrote {file_path}\")"
@@ -208,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 73,
    "id": "fdbbe72d",
    "metadata": {},
    "outputs": [
@@ -235,20 +249,20 @@
     "        self.fc2 = nn.Linear(2, 1, bias=False)\n",
     "\n",
     "m = TestModel()\n",
-    "torch.save(m, \"test.pt\")\n",
+    "torch.save(m, \"models/test.pt\")\n",
     "\n",
     "def test_export_model():\n",
     "    fname = '/tmp/.test.bin'\n",
-    "    mpath = \"test.pt\"\n",
-    "    export_model(mpath, fname)\n",
-    "    assert os.path.getsize(fname)==216 # manucally calc from export_model()\n",
+    "    mname = \"test\"\n",
+    "    export_model(mname, fname)\n",
+    "    assert os.path.getsize(fname)==220 # manucally calc from export_model()\n",
     "\n",
     "test_export_model()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 74,
    "id": "6a09db19",
    "metadata": {},
    "outputs": [],
@@ -281,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 75,
    "id": "71f18915",
    "metadata": {},
    "outputs": [],
@@ -445,11 +459,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "a0486bb6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wrote model.bin\n"
+     ]
+    }
+   ],
+   "source": [
+    "export_model(\"resnet18\")"
+   ]
   },
   {
    "cell_type": "code",
