--- a/test_all.ipynb
+++ b/test_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "92120998",
    "metadata": {},
    "outputs": [],
@@ -20,30 +20,32 @@
     "import struct\n",
     "\n",
     "from export import export_model, export_modelq8\n",
+    "from train import load\n",
     "\n",
+    "#this is predicted wrong on fastai resnet18\n",
     "file_path = \"test/data/imagenette2/val_transformed/0/113\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "96cc7f58",
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
     "# calculate reference values using Python model\n",
-    "model = torch.load(\"model.pt\")\n",
+    "model = load(\"resnet18\")\n",
     "with open(file_path, \"rb\") as f:\n",
     "    sizeof_float, nch, h, w = 4, 3, 224, 224\n",
-    "    image = torch.tensor(struct.unpack(\"f\"*(nch*h*w), f.read(sizeof_float*nch*h*w))).view(1,nch,h,w)\n",
+    "    image = torch.tensor(struct.unpack(\"f\"*(nch*h*w), f.read(sizeof_float*nch*h*w))).view(1, nch,h,w)\n",
     "    ref = model(image).detach()\n",
     "    ref = torch.nn.functional.softmax(ref, dim=1).view(-1).numpy() # python model output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "id": "9d14bf83",
    "metadata": {},
    "outputs": [],
@@ -65,7 +67,7 @@
     "def test_runfiles(quantized=True, file_path=file_path):\n",
     "    \"\"\" test run.c and runq.c works with an acceptable tolerance \"\"\"\n",
     "    # run vanilla model in test mode\n",
-    "    export_model()\n",
+    "    export_model(\"resnet18\")\n",
     "    command = [\"./run\", \"model.bin\", file_path]\n",
     "    res = execute(command)\n",
     "    assert np.allclose(res, ref, atol=1e-5, rtol=0), \"run.c: Probabilities are not close.\"\n",
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "a582d8ce",
    "metadata": {},
    "outputs": [
@@ -94,66 +96,61 @@
      "output_type": "stream",
      "text": [
       "wrote model.bin\n",
-      "Quantized (64, 3, 7, 7) to Q8_0 with max error 2.9802322387695312e-08\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 2.9802322387695312e-08\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (128, 64, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (128, 64, 1, 1) to Q8_0 with max error 2.9802322387695312e-08\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (256, 128, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (256, 128, 1, 1) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (512, 256, 3, 3) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (512, 256, 1, 1) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (10, 512) to Q8_0 with max error 3.725290298461914e-09\n",
-      "Quantized (10,) to Q8_0 with max error 0.0\n",
-      "max quantization group error across all weights: 2.9802322387695312e-08\n",
-      "wrote modelq8_1.bin\n",
-      "Quantized (64, 3, 7, 7) to Q8_0 with max error 2.9802322387695312e-08\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.0020307153463363647\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.0015603676438331604\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.001995254075154662\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.0009455680847167969\n",
-      "Quantized (128, 64, 3, 3) to Q8_0 with max error 0.001150965690612793\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 0.0013340264558792114\n",
-      "Quantized (128, 64, 1, 1) to Q8_0 with max error 0.0017687082290649414\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 0.0013014227151870728\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 0.001347661018371582\n",
-      "Quantized (256, 128, 3, 3) to Q8_0 with max error 0.0012121722102165222\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 0.001104535534977913\n",
-      "Quantized (256, 128, 1, 1) to Q8_0 with max error 0.000799892470240593\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 0.0008231215178966522\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 0.0009349463507533073\n",
-      "Quantized (512, 256, 3, 3) to Q8_0 with max error 0.0009473636746406555\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 0.0010608397424221039\n",
-      "Quantized (512, 256, 1, 1) to Q8_0 with max error 0.002634085714817047\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 0.000762447714805603\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 0.0006969422101974487\n",
-      "Quantized (10, 512) to Q8_0 with max error 0.0004251450300216675\n",
-      "Quantized (10,) to Q8_0 with max error 0.00010416563600301743\n",
-      "max quantization group error across all weights: 0.002634085714817047\n",
-      "wrote modelq8_2.bin\n",
       "Done\n"
      ]
     }
    ],
    "source": [
-    "test_runfiles()"
+    "test_runfiles(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "94b2eea5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 8.0158,  1.4867, -2.1652, -2.6870, -0.2114, -2.4135, -2.1969, -1.0151,\n",
+      "          3.1303,  7.8046]], grad_fn=<MmBackward0>)\n",
+      "torch.Size([1, 10])\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hook_fn(module, input, output):\n",
+    "    print(output)\n",
+    "    print(output.shape)\n",
+    "    return output\n",
+    "\n",
+    "\n",
+    "model = load(\"resnet18\")\n",
+    "last_resnet_layer = model[0][7]\n",
+    "pool_layer = model[1][0]\n",
+    "bn_1_layer = model[1][2]\n",
+    "ln1_layer = model[1][4]\n",
+    "bn2_layer = model[1][6]\n",
+    "ln2_layer = model[1][8]\n",
+    "\n",
+    "file_path = \"data/imagenette2/val_transformed/0/2\"\n",
+    "with open(file_path, \"rb\") as f:\n",
+    "    sizeof_float, nch, h, w = 4, 3, 224, 224\n",
+    "    image = torch.tensor(struct.unpack(\"f\"*(nch*h*w), f.read(sizeof_float*nch*h*w))).view(1, nch,h,w)\n",
+    "    hook = ln2_layer.register_forward_hook(hook_fn)\n",
+    "    out = model(image).detach()\n",
+    "    output = torch.nn.functional.softmax(out, dim=1).view(-1).numpy()\n",
+    "    print(np.argmax(output))\n",
+    "    hook.remove()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d976169d",
+   "id": "65d8b18d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -175,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
