--- a/test_all.ipynb
+++ b/test_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "id": "92120998",
    "metadata": {},
    "outputs": [],
@@ -12,6 +12,7 @@
     "Run simply with\n",
     "$ pytest\n",
     "\"\"\"\n",
+    "import pytest\n",
     "\n",
     "import os\n",
     "import subprocess\n",
@@ -20,30 +21,35 @@
     "import struct\n",
     "\n",
     "from export import export_model, export_modelq8\n",
+    "from train import load\n",
     "\n",
-    "file_path = \"test/data/imagenette2/val_transformed/0/113\""
+    "#this is predicted wrong on fastai resnet18\n",
+    "#file_path = \"test/data/imagenette2/val_transformed/0/113\"\n",
+    "file_path = \"data/imagenette2/val_transformed/0/2\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "id": "96cc7f58",
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
-    "# calculate reference values using Python model\n",
-    "model = torch.load(\"model.pt\")\n",
-    "with open(file_path, \"rb\") as f:\n",
-    "    sizeof_float, nch, h, w = 4, 3, 224, 224\n",
-    "    image = torch.tensor(struct.unpack(\"f\"*(nch*h*w), f.read(sizeof_float*nch*h*w))).view(1,nch,h,w)\n",
-    "    ref = model(image).detach()\n",
-    "    ref = torch.nn.functional.softmax(ref, dim=1).view(-1).numpy() # python model output"
+    "def calculate_reference_values(model_name, file_path):\n",
+    "    # calculate reference values using Python model\n",
+    "    model = load(model_name)\n",
+    "    with open(file_path, \"rb\") as f:\n",
+    "        sizeof_float, nch, h, w = 4, 3, 224, 224\n",
+    "        image = torch.tensor(struct.unpack(\"f\"*(nch*h*w), f.read(sizeof_float*nch*h*w))).view(1, nch,h,w)\n",
+    "        ref = model(image).detach()\n",
+    "        ref = torch.nn.functional.softmax(ref, dim=1).view(-1).numpy() # python model output\n",
+    "    return ref"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "id": "9d14bf83",
    "metadata": {},
    "outputs": [],
@@ -62,10 +68,14 @@
     "\n",
     "    return res\n",
     "\n",
-    "def test_runfiles(quantized=True, file_path=file_path):\n",
+    "@pytest.mark.parametrize(\"model_name\", [\"resnet18\", \"resnet34\", \"resnet50\"])\n",
+    "def test_runfiles(model_name, quantized=False, file_path=file_path):\n",
     "    \"\"\" test run.c and runq.c works with an acceptable tolerance \"\"\"\n",
     "    # run vanilla model in test mode\n",
-    "    export_model()\n",
+    "    ref = calculate_reference_values(model_name, file_path=\"data/imagenette2/val_transformed/0/2\")\n",
+    "    export_model(model_name)\n",
+    "    compile = [f'make compile_{model_name}']\n",
+    "    subprocess.run(compile, shell=True)\n",
     "    command = [\"./run\", \"model.bin\", file_path]\n",
     "    res = execute(command)\n",
     "    assert np.allclose(res, ref, atol=1e-5, rtol=0), \"run.c: Probabilities are not close.\"\n",
@@ -85,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "id": "a582d8ce",
    "metadata": {},
    "outputs": [
@@ -94,66 +104,158 @@
      "output_type": "stream",
      "text": [
       "wrote model.bin\n",
-      "Quantized (64, 3, 7, 7) to Q8_0 with max error 2.9802322387695312e-08\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 2.9802322387695312e-08\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (128, 64, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (128, 64, 1, 1) to Q8_0 with max error 2.9802322387695312e-08\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (256, 128, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (256, 128, 1, 1) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (512, 256, 3, 3) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (512, 256, 1, 1) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (10, 512) to Q8_0 with max error 3.725290298461914e-09\n",
-      "Quantized (10,) to Q8_0 with max error 0.0\n",
-      "max quantization group error across all weights: 2.9802322387695312e-08\n",
-      "wrote modelq8_1.bin\n",
-      "Quantized (64, 3, 7, 7) to Q8_0 with max error 2.9802322387695312e-08\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.0020307153463363647\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.0015603676438331604\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.001995254075154662\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.0009455680847167969\n",
-      "Quantized (128, 64, 3, 3) to Q8_0 with max error 0.001150965690612793\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 0.0013340264558792114\n",
-      "Quantized (128, 64, 1, 1) to Q8_0 with max error 0.0017687082290649414\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 0.0013014227151870728\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 0.001347661018371582\n",
-      "Quantized (256, 128, 3, 3) to Q8_0 with max error 0.0012121722102165222\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 0.001104535534977913\n",
-      "Quantized (256, 128, 1, 1) to Q8_0 with max error 0.000799892470240593\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 0.0008231215178966522\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 0.0009349463507533073\n",
-      "Quantized (512, 256, 3, 3) to Q8_0 with max error 0.0009473636746406555\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 0.0010608397424221039\n",
-      "Quantized (512, 256, 1, 1) to Q8_0 with max error 0.002634085714817047\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 0.000762447714805603\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 0.0006969422101974487\n",
-      "Quantized (10, 512) to Q8_0 with max error 0.0004251450300216675\n",
-      "Quantized (10,) to Q8_0 with max error 0.00010416563600301743\n",
-      "max quantization group error across all weights: 0.002634085714817047\n",
-      "wrote modelq8_2.bin\n",
+      "clang -Os -Wall -DRESNET34 run.c  func.c -lm -o run\n",
+      "clang -Os -Wall runq.c func.c -lm -o runq\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "run.c:235:13: warning: unused function 'resnet18' [-Wunused-function]\n",
+      "  235 | static void resnet18(ConvConfig *cc, LinearConfig *lc, float *p, Model *m,\n",
+      "      |             ^~~~~~~~\n",
+      "run.c:279:13: warning: unused function 'resnet50' [-Wunused-function]\n",
+      "  279 | static void resnet50(ConvConfig *cc, LinearConfig *lc, float *p, Model *m,\n",
+      "      |             ^~~~~~~~\n",
+      "2 warnings generated.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Done\n"
      ]
     }
    ],
    "source": [
-    "test_runfiles()"
+    "test_runfiles(\"resnet34\", False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "94b2eea5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "tensor([[[[1.1400, 0.8885, 1.4719,  ..., 0.5663, 0.9684, 2.1019],\n",
+      "          [2.1637, 1.6843, 0.7259,  ..., 1.3679, 1.1357, 2.0868],\n",
+      "          [0.2753, 0.8641, 0.1392,  ..., 1.0107, 1.1980, 1.8648],\n",
+      "          ...,\n",
+      "          [1.3349, 1.1786, 0.8576,  ..., 1.0482, 0.2410, 0.4808],\n",
+      "          [1.1318, 0.7934, 1.5452,  ..., 0.7654, 0.7076, 0.0306],\n",
+      "          [2.7300, 2.4416, 1.9129,  ..., 1.9120, 2.1227, 2.1891]],\n",
+      "\n",
+      "         [[1.3740, 1.1486, 0.9849,  ..., 1.0718, 1.1977, 0.8783],\n",
+      "          [0.5917, 0.4507, 1.5132,  ..., 1.3332, 0.9195, 0.3703],\n",
+      "          [0.9547, 0.9663, 1.6444,  ..., 0.9273, 1.0539, 0.8050],\n",
+      "          ...,\n",
+      "          [0.5531, 0.7749, 1.0821,  ..., 1.4570, 1.2188, 0.6488],\n",
+      "          [2.1351, 1.9420, 0.9674,  ..., 2.4470, 0.9771, 1.7373],\n",
+      "          [0.8505, 1.3167, 1.5605,  ..., 1.3034, 1.0526, 0.8555]],\n",
+      "\n",
+      "         [[0.0000, 0.0000, 0.0000,  ..., 2.5231, 0.0000, 0.0000],\n",
+      "          [0.6186, 0.8010, 0.0000,  ..., 0.0000, 1.8106, 1.4587],\n",
+      "          [0.8934, 0.0000, 0.0000,  ..., 0.8636, 0.0000, 0.0000],\n",
+      "          ...,\n",
+      "          [0.8668, 0.0000, 0.0000,  ..., 0.0000, 0.5111, 2.5466],\n",
+      "          [0.0937, 0.0000, 0.0000,  ..., 0.0000, 0.2501, 0.0000],\n",
+      "          [0.5304, 0.0000, 0.0000,  ..., 1.9293, 1.1557, 0.0000]],\n",
+      "\n",
+      "         ...,\n",
+      "\n",
+      "         [[0.4722, 0.2253, 1.0056,  ..., 1.3230, 1.5163, 0.8638],\n",
+      "          [1.1077, 0.0000, 0.0000,  ..., 0.7295, 1.1481, 0.4847],\n",
+      "          [1.2932, 0.0000, 0.0000,  ..., 0.1205, 0.6762, 0.1634],\n",
+      "          ...,\n",
+      "          [1.4694, 0.7034, 0.3140,  ..., 0.0000, 1.0133, 0.1692],\n",
+      "          [0.3550, 0.1786, 1.2531,  ..., 0.2753, 1.4195, 0.3166],\n",
+      "          [0.3385, 0.5238, 1.1465,  ..., 0.5286, 1.7407, 0.9694]],\n",
+      "\n",
+      "         [[2.0371, 2.2736, 2.4911,  ..., 1.6166, 1.3870, 1.6415],\n",
+      "          [2.6234, 2.6712, 2.5149,  ..., 2.8470, 2.4108, 1.7203],\n",
+      "          [1.7266, 2.4242, 2.5220,  ..., 2.8263, 3.1991, 3.1052],\n",
+      "          ...,\n",
+      "          [2.7216, 3.3298, 3.4325,  ..., 3.1972, 3.2230, 2.1415],\n",
+      "          [2.6120, 3.3054, 3.7591,  ..., 3.3716, 3.3569, 2.4974],\n",
+      "          [2.3210, 2.5000, 2.3612,  ..., 2.5019, 2.6518, 2.3118]],\n",
+      "\n",
+      "         [[0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "          ...,\n",
+      "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.4574],\n",
+      "          [0.0658, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 3.1714]]]],\n",
+      "       grad_fn=<ReluBackward0>)\n",
+      "torch.Size([1, 256, 56, 56])\n",
+      "[9.9673033e-01 4.5570769e-06 8.8043715e-05 2.9474473e-05 3.8813008e-04\n",
+      " 2.9244894e-04 1.5801787e-05 6.5409818e-05 1.2538651e-03 1.1319721e-03]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hook_fn(module, input, output):\n",
+    "    print(output)\n",
+    "    print(output.shape)\n",
+    "    return output\n",
+    "\n",
+    "\n",
+    "model = load(\"resnet50\")\n",
+    "fs = model[0][3]\n",
+    "first_resnet_layer = model[0][4]\n",
+    "print(len(first_resnet_layer))\n",
+    "second_resnet_layer = model[0][5]\n",
+    "last_resnet_layer = model[0][7]\n",
+    "pool_layer = model[1][0]\n",
+    "bn_1_layer = model[1][2]\n",
+    "ln1_layer = model[1][4]\n",
+    "bn2_layer = model[1][6]\n",
+    "ln2_layer = model[1][8]\n",
+    "\n",
+    "file_path = \"data/imagenette2/val_transformed/0/2\"\n",
+    "with open(file_path, \"rb\") as f:\n",
+    "    sizeof_float, nch, h, w = 4, 3, 224, 224\n",
+    "    image = torch.tensor(struct.unpack(\"f\"*(nch*h*w), f.read(sizeof_float*nch*h*w))).view(1, nch,h,w)\n",
+    "    hook = first_resnet_layer.register_forward_hook(hook_fn)\n",
+    "    out = model(image).detach()\n",
+    "    output = torch.nn.functional.softmax(out, dim=1).view(-1).numpy()\n",
+    "    print(output)\n",
+    "    hook.remove()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "65d8b18d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wrote model.bin\n",
+      "53\n"
+     ]
+    }
+   ],
+   "source": [
+    "export_model(\"resnet50\")\n",
+    "model = load(\"resnet50\")\n",
+    "conv_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.Conv2d)]\n",
+    "print(len(conv_layers))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d976169d",
+   "id": "33c42e08",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -175,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
