add fastai to train the ResNet models with pretrained weights. The models are stored to huggingface and can be loaded there. A function 'load' has been made for easier model loading using just the model name.

--- a/model_distribution.ipynb
+++ b/model_distribution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,34 +122,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3084e67a1dcd4b1a8a74d9681a8fe96b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fetching 4 files:   0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Layer: Conv2d(1, 4, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "Lower Bound Variance: 0.28811167240211666\n",
-      "Upper Bound Variance: 0.49566433535902177\n",
-      "Mean: -0.1035236269235611\n",
-      "Standard Deviation: 0.31365475058555603\n",
-      "Skewness: 0.509540225646513\n",
-      "Kurtosis: -0.783474915615864\n",
+      "Layer: Conv2d(3, 64, kernel_size=(7, 7), stride=(2, 2), padding=(3, 3), bias=False)\n",
+      "Lower Bound Variance: 0.013032202378237066\n",
+      "Upper Bound Variance: 0.01286460662584296\n",
+      "Mean: 1.966832860489376e-05\n",
+      "Standard Deviation: 0.12968988716602325\n",
+      "Skewness: 0.14994891598874535\n",
+      "Kurtosis: 7.491127270923942\n",
       "---------------------------------\n",
-      "Layer: Conv2d(4, 8, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "Lower Bound Variance: 0.008650628691970733\n",
-      "Upper Bound Variance: 0.006040862606292306\n",
-      "Mean: 0.017239652574062347\n",
-      "Standard Deviation: 0.1602303832769394\n",
-      "Skewness: 0.30073155080767544\n",
-      "Kurtosis: 0.010206895783474224\n",
+      "Layer: Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "Lower Bound Variance: 0.0004231605339048706\n",
+      "Upper Bound Variance: 0.00041468960852841205\n",
+      "Mean: -0.003089030273258686\n",
+      "Standard Deviation: 0.053396470844745636\n",
+      "Skewness: -1.564435306572667\n",
+      "Kurtosis: 17.784755763435776\n",
+      "---------------------------------\n",
+      "Layer: Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "Lower Bound Variance: 0.0004433990565899064\n",
+      "Upper Bound Variance: 0.0004113760190948275\n",
+      "Mean: -0.0008884609560482204\n",
+      "Standard Deviation: 0.04519964009523392\n",
+      "Skewness: -0.2256642947721327\n",
+      "Kurtosis: 4.48190547873976\n",
+      "---------------------------------\n",
+      "Layer: Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "Lower Bound Variance: 0.0002729337953607828\n",
+      "Upper Bound Variance: 0.00023051057479150122\n",
+      "Mean: -0.0024187753442674875\n",
+      "Standard Deviation: 0.05083387717604637\n",
+      "Skewness: -0.32936156601552746\n",
+      "Kurtosis: 12.433238604821494\n",
+      "---------------------------------\n",
+      "Layer: Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "Lower Bound Variance: 0.00035277312335638936\n",
+      "Upper Bound Variance: 0.0003032668076458135\n",
+      "Mean: -0.0012628237018361688\n",
+      "Standard Deviation: 0.04397530481219292\n",
+      "Skewness: -0.1955549079171501\n",
+      "Kurtosis: 3.9587604331746675\n",
+      "---------------------------------\n",
+      "Layer: Conv2d(64, 128, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+      "Lower Bound Variance: 9.187195540825955e-05\n",
+      "Upper Bound Variance: 9.347351954709722e-05\n",
+      "Mean: -0.0014502097619697452\n",
+      "Standard Deviation: 0.04158255457878113\n",
+      "Skewness: 0.02199495807510249\n",
+      "Kurtosis: 4.256655204170669\n",
+      "---------------------------------\n",
+      "Layer: Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "Lower Bound Variance: 0.00010813186529713693\n",
+      "Upper Bound Variance: 0.00010147892372133852\n",
+      "Mean: -0.0012455213582143188\n",
+      "Standard Deviation: 0.03401222825050354\n",
+      "Skewness: -0.0010486913627793784\n",
+      "Kurtosis: 6.6184779450940106\n",
+      "---------------------------------\n",
+      "Layer: Conv2d(64, 128, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+      "Lower Bound Variance: 0.0010810463779342867\n",
+      "Upper Bound Variance: 0.0009746638618518261\n",
+      "Mean: -0.0025902539491653442\n",
+      "Standard Deviation: 0.070615753531456\n",
+      "Skewness: -0.4412879364613187\n",
+      "Kurtosis: 12.53562532595889\n",
+      "---------------------------------\n",
+      "Layer: Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "Lower Bound Variance: 8.612807986920698e-05\n",
+      "Upper Bound Variance: 7.082070252219393e-05\n",
+      "Mean: -0.0015271882293745875\n",
+      "Standard Deviation: 0.03417011350393295\n",
+      "Skewness: 0.10446812924712552\n",
+      "Kurtosis: 6.153492863225381\n",
+      "---------------------------------\n",
+      "Layer: Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "Lower Bound Variance: 0.00016008345464528734\n",
+      "Upper Bound Variance: 0.00012419908255574118\n",
+      "Mean: -0.001270890235900879\n",
+      "Standard Deviation: 0.030050786212086678\n",
+      "Skewness: -0.02381767089463395\n",
+      "Kurtosis: 3.278498265445494\n",
+      "---------------------------------\n",
+      "Layer: Conv2d(128, 256, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+      "Lower Bound Variance: 4.106633020693632e-05\n",
+      "Upper Bound Variance: 3.5759180993058846e-05\n",
+      "Mean: -0.0013616106007248163\n",
+      "Standard Deviation: 0.029055245220661163\n",
+      "Skewness: 0.22656027611182697\n",
+      "Kurtosis: 5.835691615596165\n",
+      "---------------------------------\n",
+      "Layer: Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "Lower Bound Variance: 2.61426072010742e-05\n",
+      "Upper Bound Variance: 2.2456842004904537e-05\n",
+      "Mean: -0.0007855335716158152\n",
+      "Standard Deviation: 0.025055915117263794\n",
+      "Skewness: 0.14065601821331628\n",
+      "Kurtosis: 4.973661488917224\n",
+      "---------------------------------\n",
+      "Layer: Conv2d(128, 256, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+      "Lower Bound Variance: 0.00023730563044453804\n",
+      "Upper Bound Variance: 0.00020838192200389296\n",
+      "Mean: -0.0018866242608055472\n",
+      "Standard Deviation: 0.03295215964317322\n",
+      "Skewness: -0.10307863905531343\n",
+      "Kurtosis: 4.337133058354884\n",
+      "---------------------------------\n",
+      "Layer: Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "Lower Bound Variance: 2.7261592478705805e-05\n",
+      "Upper Bound Variance: 1.8700282202183964e-05\n",
+      "Mean: -0.0016581225208938122\n",
+      "Standard Deviation: 0.022373024374246597\n",
+      "Skewness: 0.2070388929369238\n",
+      "Kurtosis: 4.131958526805244\n",
+      "---------------------------------\n",
+      "Layer: Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "Lower Bound Variance: 9.029800088605026e-05\n",
+      "Upper Bound Variance: 6.372415987083229e-05\n",
+      "Mean: -0.0014455108903348446\n",
+      "Standard Deviation: 0.020683009177446365\n",
+      "Skewness: -0.014827343211722018\n",
+      "Kurtosis: 3.3834304063284275\n",
+      "---------------------------------\n",
+      "Layer: Conv2d(256, 512, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+      "Lower Bound Variance: 8.888525542667102e-06\n",
+      "Upper Bound Variance: 8.281531927461761e-06\n",
+      "Mean: -0.0015613900031894445\n",
+      "Standard Deviation: 0.019887639209628105\n",
+      "Skewness: 0.26648034992505526\n",
+      "Kurtosis: 2.437680848430406\n",
+      "---------------------------------\n",
+      "Layer: Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "Lower Bound Variance: 7.409034953768725e-06\n",
+      "Upper Bound Variance: 6.678059577880225e-06\n",
+      "Mean: -0.0013074622256681323\n",
+      "Standard Deviation: 0.017340946942567825\n",
+      "Skewness: 0.22481224640117684\n",
+      "Kurtosis: 2.3541431228077645\n",
+      "---------------------------------\n",
+      "Layer: Conv2d(256, 512, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+      "Lower Bound Variance: 0.0001253736656920757\n",
+      "Upper Bound Variance: 0.00011533843354463765\n",
+      "Mean: -0.0008413573959842324\n",
+      "Standard Deviation: 0.0327899307012558\n",
+      "Skewness: 0.2517948278938659\n",
+      "Kurtosis: 7.408297126831078\n",
+      "---------------------------------\n",
+      "Layer: Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "Lower Bound Variance: 5.079340904153288e-06\n",
+      "Upper Bound Variance: 3.909517504233449e-06\n",
+      "Mean: -0.0022653231862932444\n",
+      "Standard Deviation: 0.01784406043589115\n",
+      "Skewness: 0.21809172411976305\n",
+      "Kurtosis: 1.2430864926787857\n",
+      "---------------------------------\n",
+      "Layer: Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "Lower Bound Variance: 3.1551575928236245e-06\n",
+      "Upper Bound Variance: 3.1015477190487762e-06\n",
+      "Mean: -0.00011663066106848419\n",
+      "Standard Deviation: 0.01322280615568161\n",
+      "Skewness: 0.7032195816464717\n",
+      "Kurtosis: 3.3925933194347833\n",
       "---------------------------------\n"
      ]
     }
    ],
    "source": [
-    "model = torch.load('model.pt')\n",
+    "from train import load\n",
+    "\n",
+    "model = load(\"resnet18\")\n",
     "plot_layers(model, visualize=False)"
    ]
   },
@@ -163,7 +323,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -177,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
