--- a/export.ipynb
+++ b/export.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 27,
    "id": "8e29ffa9",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
     "    \n",
     "\n",
     "\n",
-    "def export_model(model_path=\"model.pt\", file_path=\"model.bin\"):\n",
+    "def export_model(model, file_path=\"model.bin\"):\n",
     "    '''\n",
     "    Export the quantized model to a file\n",
     "    The data inside the file follows this order:\n",
@@ -167,7 +167,6 @@
     "    2. CNN, FC and BN layers' configuration\n",
     "    3. CNN, FC and BN layers' parameters\n",
     "    '''\n",
-    "    model = torch.load(model_path)\n",
     "    f = open(file_path, \"wb\")\n",
     "    # write model config\n",
     "    conv_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.Conv2d)]\n",
@@ -208,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 28,
    "id": "fdbbe72d",
    "metadata": {},
    "outputs": [
@@ -227,20 +226,17 @@
     "class TestModel(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(TestModel, self).__init__()\n",
-    "        self.nclasses = 4\n",
-    "        self.conv1 = nn.Conv2d(1, 1, kernel_size=3, padding=1, bias=False)\n",
+    "        self.conv1 = nn.Conv2d(1, 1, kernel_size=3, padding=1, bias=True)\n",
     "        self.conv2 = nn.Conv2d(1, 1, kernel_size=3, padding=1, bias=False)\n",
     "        self.bn = nn.BatchNorm2d(1)\n",
     "        self.fc1 = nn.Linear(3, 2)\n",
     "        self.fc2 = nn.Linear(2, 1, bias=False)\n",
     "\n",
     "m = TestModel()\n",
-    "torch.save(m, \"test.pt\")\n",
     "\n",
     "def test_export_model():\n",
     "    fname = '/tmp/.test.bin'\n",
-    "    mpath = \"test.pt\"\n",
-    "    export_model(mpath, fname)\n",
+    "    export_model(m, fname)\n",
     "    assert os.path.getsize(fname)==216 # manucally calc from export_model()\n",
     "\n",
     "test_export_model()"
@@ -248,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 21,
    "id": "6a09db19",
    "metadata": {},
    "outputs": [],
@@ -281,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 24,
    "id": "71f18915",
    "metadata": {},
    "outputs": [],
@@ -300,7 +296,7 @@
     "        factors = list(divisors(dim)) # give the factors of number \"dim\"\n",
     "        return min(factors, key=lambda x: abs(x - gs)) # find the closest number to group size\n",
     "\n",
-    "def export_modelq8(model_path=\"model.pt\", file_path=\"modelq8.bin\", gs=64):\n",
+    "def export_modelq8(model, file_path=\"modelq8.bin\", gs=64):\n",
     "    '''\n",
     "    Export the quantized model to a file\n",
     "    The data inside the file follows this order:\n",
@@ -310,7 +306,6 @@
     "    4. CNN and FC layers' scaling factors\n",
     "    5. BN layers' parameters\n",
     "    '''\n",
-    "    model = torch.load(model_path)\n",
     "    f = open(file_path, \"wb\")\n",
     "    # write model config\n",
     "    conv_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.Conv2d)]\n",
@@ -330,15 +325,21 @@
     "    for layer in conv_layers:\n",
     "        # calculates group sizes for weights and biases\n",
     "        gs_weight = calculate_groupsize(layer.in_channels * layer.kernel_size[0]**2, gs)\n",
-    "        gs_bias = calculate_groupsize(layer.out_features, gs) if layer.bias is not None else 0\n",
+    "        gs_bias = calculate_groupsize(layer.out_channels, gs) if layer.bias is not None else 0\n",
     "        group_sizes.append(gs_weight)\n",
+    "        if layer.bias is not None:\n",
+    "            group_sizes.append(gs_bias)\n",
     "\n",
     "        f.write(struct.pack(\"9i\", layer.kernel_size[0], layer.stride[0], layer.padding[0],\n",
     "                layer.in_channels, layer.out_channels, qoffset, soffset, gs_weight, gs_bias))\n",
     "        # set offsets to the start of next layer\n",
     "        nweights = layer.out_channels * layer.in_channels * layer.kernel_size[0]**2\n",
-    "        qoffset += nweights\n",
-    "        soffset += nweights // gs_weight\n",
+    "        if layer.bias is not None:\n",
+    "            qoffset += nweights + layer.out_channels\n",
+    "            soffset += nweights // gs_weight + layer.out_channels // gs_bias\n",
+    "        else:\n",
+    "            qoffset += nweights\n",
+    "            soffset += nweights // gs_weight\n",
     "\n",
     "    for layer in linear_layers:\n",
     "       \n",
@@ -393,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 25,
    "id": "8e696dc1",
    "metadata": {},
    "outputs": [
@@ -401,14 +402,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Quantized (1, 1, 3, 3) to Q8_0 with max error 0.001162409782409668\n",
+      "Quantized (1,) to Q8_0 with max error 0.0\n",
+      "Quantized (1, 1, 3, 3) to Q8_0 with max error 0.0007749646902084351\n",
+      "Quantized (2, 3) to Q8_0 with max error 0.0010278001427650452\n",
+      "Quantized (2,) to Q8_0 with max error 3.308430314064026e-05\n",
+      "Quantized (1, 2) to Q8_0 with max error 0.0016409754753112793\n",
+      "max quantization group error across all weights: 0.0016409754753112793\n",
       "wrote /tmp/.test.bin\n",
-      "Quantized (1, 1, 3, 3) to Q8_0 with max error 0.0011526569724082947\n",
-      "Quantized (1, 1, 3, 3) to Q8_0 with max error 0.001158013939857483\n",
-      "Quantized (2, 3) to Q8_0 with max error 0.0010108351707458496\n",
-      "Quantized (2,) to Q8_0 with max error 0.00028876960277557373\n",
-      "Quantized (1, 2) to Q8_0 with max error 0.002393275499343872\n",
-      "max quantization group error across all weights: 0.002393275499343872\n",
-      "wrote /tmp/.test.bin\n"
+      "221\n"
      ]
     }
    ],
@@ -436,25 +438,97 @@
     "def test_export_modelq8():\n",
     "    fname = '/tmp/.test.bin'\n",
     "    mpath = \"test.pt\"\n",
-    "    export_model(mpath, fname)\n",
-    "    export_modelq8(mpath, fname, gs=10)\n",
-    "    assert os.path.getsize(fname)==216\n",
+    "    export_modelq8(m, fname, gs=10)\n",
+    "    print(os.path.getsize(fname))\n",
+    "    assert os.path.getsize(fname)==221\n",
     "\n",
     "test_export_modelq8()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "a0486bb6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ae73b6fb92c84b74b5347589d042ccc2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fetching 4 files:   0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wrote resnet18\n",
+      "Quantized (64, 3, 7, 7) to Q8_0 with max error 0.0014927666634321213\n",
+      "Quantized (64,) to Q8_0 with max error 0.0027480125427246094\n",
+      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.0014041177928447723\n",
+      "Quantized (64,) to Q8_0 with max error 0.004259288311004639\n",
+      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.0030389800667762756\n",
+      "Quantized (64,) to Q8_0 with max error 0.007005281746387482\n",
+      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.000996860209852457\n",
+      "Quantized (64,) to Q8_0 with max error 0.004529852420091629\n",
+      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.004110235720872879\n",
+      "Quantized (64,) to Q8_0 with max error 0.004633735865354538\n",
+      "Quantized (128, 64, 3, 3) to Q8_0 with max error 0.000799116212874651\n",
+      "Quantized (128,) to Q8_0 with max error 0.002840474247932434\n",
+      "Quantized (128, 128, 3, 3) to Q8_0 with max error 0.0027258535847067833\n",
+      "Quantized (128,) to Q8_0 with max error 0.005659207701683044\n",
+      "Quantized (128, 64, 1, 1) to Q8_0 with max error 0.002594406483694911\n",
+      "Quantized (128,) to Q8_0 with max error 0.0040948763489723206\n",
+      "Quantized (128, 128, 3, 3) to Q8_0 with max error 0.0012302137911319733\n",
+      "Quantized (128,) to Q8_0 with max error 0.003189489245414734\n",
+      "Quantized (128, 128, 3, 3) to Q8_0 with max error 0.0032473504543304443\n",
+      "Quantized (128,) to Q8_0 with max error 0.00449526309967041\n",
+      "Quantized (256, 128, 3, 3) to Q8_0 with max error 0.0009208954870700836\n",
+      "Quantized (256,) to Q8_0 with max error 0.0033157505095005035\n",
+      "Quantized (256, 256, 3, 3) to Q8_0 with max error 0.002117447555065155\n",
+      "Quantized (256,) to Q8_0 with max error 0.0024379342794418335\n",
+      "Quantized (256, 128, 1, 1) to Q8_0 with max error 0.0016306489706039429\n",
+      "Quantized (256,) to Q8_0 with max error 0.0012940764427185059\n",
+      "Quantized (256, 256, 3, 3) to Q8_0 with max error 0.001060747541487217\n",
+      "Quantized (256,) to Q8_0 with max error 0.0032491981983184814\n",
+      "Quantized (256, 256, 3, 3) to Q8_0 with max error 0.003918588161468506\n",
+      "Quantized (256,) to Q8_0 with max error 0.004005499184131622\n",
+      "Quantized (512, 256, 3, 3) to Q8_0 with max error 0.0011239498853683472\n",
+      "Quantized (512,) to Q8_0 with max error 0.002194136381149292\n",
+      "Quantized (512, 512, 3, 3) to Q8_0 with max error 0.004361260682344437\n",
+      "Quantized (512,) to Q8_0 with max error 0.004285290837287903\n",
+      "Quantized (512, 256, 1, 1) to Q8_0 with max error 0.003636285662651062\n",
+      "Quantized (512,) to Q8_0 with max error 0.002968907356262207\n",
+      "Quantized (512, 512, 3, 3) to Q8_0 with max error 0.0011258642189204693\n",
+      "Quantized (512,) to Q8_0 with max error 0.0032904595136642456\n",
+      "Quantized (512, 512, 3, 3) to Q8_0 with max error 0.01702466607093811\n",
+      "Quantized (512,) to Q8_0 with max error 0.011147633194923401\n",
+      "Quantized (512, 1024) to Q8_0 with max error 0.0008306273957714438\n",
+      "Quantized (10, 512) to Q8_0 with max error 0.0008944347500801086\n",
+      "max quantization group error across all weights: 0.01702466607093811\n",
+      "wrote resnet18_q8\n"
+     ]
+    }
+   ],
+   "source": [
+    "from train import load\n",
+    "\n",
+    "model = load(\"resnet18\").model\n",
+    "export_model(model, \"resnet18\")\n",
+    "export_modelq8(model, \"resnet18_q8\", gs=64)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d218cbe",
+   "id": "2f539b32",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -462,7 +536,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -476,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
