--- a/test_all.ipynb
+++ b/test_all.ipynb
@@ -12,6 +12,7 @@
     "Run simply with\n",
     "$ pytest\n",
     "\"\"\"\n",
+    "import pytest\n",
     "\n",
     "import os\n",
     "import subprocess\n",
@@ -20,6 +21,7 @@
     "import struct\n",
     "\n",
     "from export import export_model, export_modelq8\n",
+    "from train import load\n",
     "\n",
     "file_path = \"test/data/imagenette2/val_transformed/0/113\""
    ]
@@ -33,17 +35,19 @@
    "source": [
     "#|export\n",
     "# calculate reference values using Python model\n",
-    "model = torch.load(\"model.pt\")\n",
-    "with open(file_path, \"rb\") as f:\n",
-    "    sizeof_float, nch, h, w = 4, 3, 224, 224\n",
-    "    image = torch.tensor(struct.unpack(\"f\"*(nch*h*w), f.read(sizeof_float*nch*h*w))).view(1,nch,h,w)\n",
-    "    ref = model(image).detach()\n",
-    "    ref = torch.nn.functional.softmax(ref, dim=1).view(-1).numpy() # python model output"
+    "def calculate_reference_values(model, file_path):\n",
+    "    # calculate reference values using Python model\n",
+    "    with open(file_path, \"rb\") as f:\n",
+    "        sizeof_float, nch, h, w = 4, 3, 224, 224\n",
+    "        image = torch.tensor(struct.unpack(\"f\"*(nch*h*w), f.read(sizeof_float*nch*h*w))).view(1, nch,h,w)\n",
+    "        ref = model(image).detach()\n",
+    "        ref = torch.nn.functional.softmax(ref, dim=1).view(-1).numpy() # python model output\n",
+    "    return ref"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "9d14bf83",
    "metadata": {},
    "outputs": [],
@@ -62,10 +66,15 @@
     "\n",
     "    return res\n",
     "\n",
-    "def test_runfiles(quantized=True, file_path=file_path):\n",
+    "@pytest.mark.parametrize(\"model_name\", [\"resnet18\", \"resnet34\", \"resnet50\"])\n",
+    "def test_runfiles(model_name, quantized=False, file_path=file_path):\n",
     "    \"\"\" test run.c and runq.c works with an acceptable tolerance \"\"\"\n",
     "    # run vanilla model in test mode\n",
-    "    export_model()\n",
+    "    model = load(model_name).model\n",
+    "    ref = calculate_reference_values(model, file_path=\"data/imagenette2/val_transformed/0/2\")\n",
+    "    export_model(model)\n",
+    "    compile = [f'make compile_{model_name}']\n",
+    "    subprocess.run(compile, shell=True)\n",
     "    command = [\"./run\", \"model.bin\", file_path]\n",
     "    res = execute(command)\n",
     "    assert np.allclose(res, ref, atol=1e-5, rtol=0), \"run.c: Probabilities are not close.\"\n",
@@ -85,69 +94,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "a582d8ce",
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2c53140cf6df458fbd784fb55c56f94d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fetching 4 files:   0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wrote model.bin\n",
-      "Quantized (64, 3, 7, 7) to Q8_0 with max error 2.9802322387695312e-08\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 2.9802322387695312e-08\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (128, 64, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (128, 64, 1, 1) to Q8_0 with max error 2.9802322387695312e-08\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (256, 128, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (256, 128, 1, 1) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (512, 256, 3, 3) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (512, 256, 1, 1) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 7.450580596923828e-09\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (10, 512) to Q8_0 with max error 3.725290298461914e-09\n",
-      "Quantized (10,) to Q8_0 with max error 0.0\n",
-      "max quantization group error across all weights: 2.9802322387695312e-08\n",
-      "wrote modelq8_1.bin\n",
-      "Quantized (64, 3, 7, 7) to Q8_0 with max error 2.9802322387695312e-08\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.0020307153463363647\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.0015603676438331604\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.001995254075154662\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.0009455680847167969\n",
-      "Quantized (128, 64, 3, 3) to Q8_0 with max error 0.001150965690612793\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 0.0013340264558792114\n",
-      "Quantized (128, 64, 1, 1) to Q8_0 with max error 0.0017687082290649414\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 0.0013014227151870728\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 0.001347661018371582\n",
-      "Quantized (256, 128, 3, 3) to Q8_0 with max error 0.0012121722102165222\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 0.001104535534977913\n",
-      "Quantized (256, 128, 1, 1) to Q8_0 with max error 0.000799892470240593\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 0.0008231215178966522\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 0.0009349463507533073\n",
-      "Quantized (512, 256, 3, 3) to Q8_0 with max error 0.0009473636746406555\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 0.0010608397424221039\n",
-      "Quantized (512, 256, 1, 1) to Q8_0 with max error 0.002634085714817047\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 0.000762447714805603\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 0.0006969422101974487\n",
-      "Quantized (10, 512) to Q8_0 with max error 0.0004251450300216675\n",
-      "Quantized (10,) to Q8_0 with max error 0.00010416563600301743\n",
-      "max quantization group error across all weights: 0.002634085714817047\n",
-      "wrote modelq8_2.bin\n",
-      "Done\n"
+      "wrote modelq8.bin\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "make: *** No rule to make target `compile_resnet18'.  Stop.\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './run'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtest_runfiles\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mresnet18\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[3], line 25\u001b[0m, in \u001b[0;36mtest_runfiles\u001b[0;34m(model_name, quantized, file_path)\u001b[0m\n\u001b[1;32m     23\u001b[0m subprocess\u001b[38;5;241m.\u001b[39mrun(\u001b[38;5;28mcompile\u001b[39m, shell\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     24\u001b[0m command \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./run\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel.bin\u001b[39m\u001b[38;5;124m\"\u001b[39m, file_path]\n\u001b[0;32m---> 25\u001b[0m res \u001b[38;5;241m=\u001b[39m \u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m np\u001b[38;5;241m.\u001b[39mallclose(res, ref, atol\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-5\u001b[39m, rtol\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrun.c: Probabilities are not close.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m quantized:\n\u001b[1;32m     29\u001b[0m     \u001b[38;5;66;03m# run quantized model test with group size = 1 and 2 in test mode\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[3], line 9\u001b[0m, in \u001b[0;36mexecute\u001b[0;34m(command)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(err, mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m fe:\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(out, mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m fo:\n\u001b[0;32m----> 9\u001b[0m         proc \u001b[38;5;241m=\u001b[39m \u001b[43msubprocess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mPopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstdout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfo\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstderr\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfe\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m         proc\u001b[38;5;241m.\u001b[39mwait()\n\u001b[1;32m     11\u001b[0m res \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mloadtxt(out)\n",
+      "File \u001b[0;32m~/mambaforge/lib/python3.10/subprocess.py:966\u001b[0m, in \u001b[0;36mPopen.__init__\u001b[0;34m(self, args, bufsize, executable, stdin, stdout, stderr, preexec_fn, close_fds, shell, cwd, env, universal_newlines, startupinfo, creationflags, restore_signals, start_new_session, pass_fds, user, group, extra_groups, encoding, errors, text, umask, pipesize)\u001b[0m\n\u001b[1;32m    962\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtext_mode:\n\u001b[1;32m    963\u001b[0m             \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstderr \u001b[38;5;241m=\u001b[39m io\u001b[38;5;241m.\u001b[39mTextIOWrapper(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstderr,\n\u001b[1;32m    964\u001b[0m                     encoding\u001b[38;5;241m=\u001b[39mencoding, errors\u001b[38;5;241m=\u001b[39merrors)\n\u001b[0;32m--> 966\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execute_child\u001b[49m\u001b[43m(\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexecutable\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpreexec_fn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mclose_fds\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    967\u001b[0m \u001b[43m                        \u001b[49m\u001b[43mpass_fds\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcwd\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43menv\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    968\u001b[0m \u001b[43m                        \u001b[49m\u001b[43mstartupinfo\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreationflags\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshell\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    969\u001b[0m \u001b[43m                        \u001b[49m\u001b[43mp2cread\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mp2cwrite\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    970\u001b[0m \u001b[43m                        \u001b[49m\u001b[43mc2pread\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mc2pwrite\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    971\u001b[0m \u001b[43m                        \u001b[49m\u001b[43merrread\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merrwrite\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    972\u001b[0m \u001b[43m                        \u001b[49m\u001b[43mrestore_signals\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    973\u001b[0m \u001b[43m                        \u001b[49m\u001b[43mgid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgids\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43muid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mumask\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    974\u001b[0m \u001b[43m                        \u001b[49m\u001b[43mstart_new_session\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    975\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m:\n\u001b[1;32m    976\u001b[0m     \u001b[38;5;66;03m# Cleanup if the child failed starting.\u001b[39;00m\n\u001b[1;32m    977\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mfilter\u001b[39m(\u001b[38;5;28;01mNone\u001b[39;00m, (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstdin, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstdout, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstderr)):\n",
+      "File \u001b[0;32m~/mambaforge/lib/python3.10/subprocess.py:1842\u001b[0m, in \u001b[0;36mPopen._execute_child\u001b[0;34m(self, args, executable, preexec_fn, close_fds, pass_fds, cwd, env, startupinfo, creationflags, shell, p2cread, p2cwrite, c2pread, c2pwrite, errread, errwrite, restore_signals, gid, gids, uid, umask, start_new_session)\u001b[0m\n\u001b[1;32m   1840\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m errno_num \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m   1841\u001b[0m         err_msg \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mstrerror(errno_num)\n\u001b[0;32m-> 1842\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m child_exception_type(errno_num, err_msg, err_filename)\n\u001b[1;32m   1843\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m child_exception_type(err_msg)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './run'"
      ]
     }
    ],
    "source": [
-    "test_runfiles()"
+    "test_runfiles(\"resnet18\")"
    ]
   },
   {
